Implementação de cache na aplicação

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+			<!--Em produção deve ser definido um provedor para que o spring não use o default que e um hash em memória -->
+		</dependency>
+		
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
