--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.format_sql=false
 # h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+# jwt
+forum.jwt.secret=rm'!@N=Ke!~p8VTb2ZRK~nMDQX8Uvm!m'D&]{@Vr?G;2?XhbC:Qa#9#eMxN\}x3?JR3.8zr~v)gYF^8\:8>:XfB:Ww75N/emt9Yj[bQMNCWwW\J?N,nvH.<2\.r~w]*e~vgak)X"v8H`MH/7"2E`,^k@n<vE-wD3g9JWPy;CrY*.Kd2_D])=><D?YhBzaua5hW%{2]_FVXzb9`8FH^b[Q3jzVER&:jw2<=c09=>L/zBq`}C6tT*cCSVC^c]-L}&/
+forum.jwt.expiration=86400000
