--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,5 @@ info.app.encoding=@project.build.sourceEncoding@
 info.app.java.version=@java.version@
 
 # spring boot admin
-spring.boot.admin.client.url=http://localhost:8081
+spring.boot.admin.client.url=http://host.docker.internal:9090/
+spring.boot.admin.client.instance.management-base-url=http://host.docker.internal:8080/
