--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,6 @@ info.app.java.version=@java.version@
 # spring boot admin
 spring.boot.admin.client.url=http://host.docker.internal:9090/
 spring.boot.admin.client.instance.management-base-url=http://host.docker.internal:8080/
+
+#Config para localhost
+#spring.boot.admin.client.url=http://localhost:8081/
